--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="tp2.appcache">
+<html >
 <head>
 	<title>TP2</title>
 	<link rel="stylesheet"  type="text/css" href="css/style.css">
